fixup: Re-implement styles for right aligned icons

--- a/protocol-designer/src/components/steplist/MultiSelectToolbar/styles.css
+++ b/protocol-designer/src/components/steplist/MultiSelectToolbar/styles.css
@@ -20,5 +20,8 @@
 
 .icon_right {
   margin-left: auto;
+}
+
+.toolbar_delete {
   width: 1.5rem;
 }
